# deepsys

./: CMakeCPackOptions.cmake  CMakeCache.txt  CMakeLists.txt  DEVELOPMENT_INSTALL.md  Makefile  README.md  README_MODULAR.md  cmake_install.cmake  example_usage.cpp  simple_test  simple_test.cpp
.github/workflows/: build-drivers.yaml  ci-cd.yaml  dependency-management.yaml  documentation.yaml  issue-management.yaml  release.yaml
.travis/linux/: build.sh
.travis/osx/: build.sh  install.sh
chisels/: CMakeLists.txt
chisels/include/chisels/: interface.h
cli/: CMakeLists.txt  main.cpp
cli/include/cli/: interface.h
common/: inttypes_win.h
conf/: dev.conf
core/: CMakeLists.txt
core/include/core/: logger.h  types.h
core/src/: logger.cpp  types.cpp
debian/: postinst  prerm
docker/dev/: Dockerfile  docker-entrypoint.sh
docker/local/: Dockerfile  docker-entrypoint.sh
docker/stable/: Dockerfile  docker-entrypoint.sh
driver/: driver_config.h  dynamic_params_table.c  event_table.c  flags_table.c  main.c  ppm.h  ppm_events.c  ppm_events.h  ppm_events_public.h  ppm_fillers.c  ppm_ringbuffer.h  syscall_table.c
libscap/: CMakeLists.txt
libscap/include/scap/: interface.h
libsinsp/: CMakeLists.txt
libsinsp/include/sinsp/: interface.h
scripts/: CMakeLists.txt  Dockerfile.ol6  Dockerfile.ol7  build-probe-binaries  deepsys-probe-loader  description.txt  install-deepsys  install-deepsys.in  scap-driver-loader.in  zig-c++  zig-cc
scripts/completions/bash/: deepsys
scripts/completions/zsh/: _deepsys
scripts/rpm/: postinstall  preuninstall
test/: cdeepsys_trace_regression.sh  deepsys_batch_parser.sh  deepsys_trace_regression.sh
tests/: CMakeLists.txt
tests/core/: test_core.cpp
userspace/: deepsys.project  userspace.sln
userspace/common/: deepsys_types.h
userspace/deepsys/: cdeepsys.cpp  config_deepsys.h.in  deepsys.cpp  deepsys.h  deepsys.vcxproj
userspace/deepsys/chisels/: v_spy_users_wdeepsys.lua  wdeepsys_summary.lua
userspace/deepsys/man/: cdeepsys.8  cdeepsys.md  deepsys.8  deepsys.md
userspace/libscap/: dynamic_params_table.c  event_table.c  flags_table.c  scap-int.h  scap.c  scap.h  scap_event.c  scap_fds.c  scap_iflist.c  scap_procs.c  scap_savefile.c  scap_savefile.h  scap_userlist.c  syscall_info_table.c
userspace/libscap/doxygen/: header.html
userspace/libscap/examples/01-open/: test.c
userspace/libscap/examples/02-validatebuffer/: test.c
userspace/libsinsp/: chisel.cpp  chisel.h  chisel_api.cpp  chisel_api.h  container.cpp  container.h  ctext.cpp  ctext.h  cursescomponents.cpp  cursescomponents.h  cursesspectro.cpp  cursesspectro.h  cursestable.cpp  cursestable.h  cursesui.cpp  cursesui.h  dumper.cpp  dumper.h  event.cpp  event.h  eventformatter.cpp  eventformatter.h  fdinfo.cpp  fdinfo.h  filter.cpp  filter.h  filter_value.h  filterchecks.cpp  filterchecks.h  http_reason.cpp  http_reason.h  ifinfo.cpp  ifinfo.h  ifinfo_test.cpp  internal_metrics.cpp  internal_metrics.h  k8s.h  k8s_component.cpp  logger.cpp  logger.h  (+36 more)
userspace/libsinsp/doxygen/: header.html
userspace/sysdig/: CMakeLists.txt  fields_info.cpp
userspace/sysdig/chisels/: ansiterminal.lua  around.lua  bottlenecks.lua  common.lua  echo_fds.lua  fdbytes_by.lua  fdcount_by.lua  fdtime_by.lua  fileslower.lua  flame.lua  http.lua  httplog.lua  httptop.lua  iobytes.lua  iobytes_file.lua  iobytes_net.lua  list_login_shells.lua  lscontainers.lua  lsof.lua  memcachelog.lua  netlower.lua  netstat.lua  proc_exec_time.lua  ps.lua  scallslower.lua  shellshock_detect.lua  spectrogram.lua  spy_file.lua  spy_ip.lua  spy_logs.lua  spy_port.lua  spy_syslog.lua  spy_users.lua  statsd.lua  stderr.lua  stdin.lua  stdout.lua  subsecoffset.lua  table_generator.lua  topconns.lua  (+57 more)
userspace/sysdig/man/: CMakeLists.txt  build.sh
